Last few tweaks. All from ontology.ttl should be included now.
If not, that's a bug...

--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html prefix="bridgedb: http://vocabularies.bridgedb.org/ops# skos: http://www.w3.org/2004/02/skos/core# void: http://rdfs.org/ns/void#" lang="en">
 <head>
@@ -223,6 +221,12 @@ This property has
   <a property="rdfs:domain" href="http://vocabularies.bridgedb.org/ops#DataSource">DataSource</a>
   as domain.</p>
 </div>
+<div id="hasRegexUriPattern" about="http://vocabularies.bridgedb.org/ops#hasRegexUriPattern" typeof="owl:DatatypeProperty">
+<h3 property="rdfs:label">Has URI Regular Expression</h3>
+<p>This property has
+  <a property="rdfs:domain" href="http://vocabularies.bridgedb.org/ops#DataSource">DataSource</a>
+  as domain.</p>
+</div>
 <div id="code" about="http://vocabularies.bridgedb.org/ops#code" typeof="owl:DatatypeProperty">
 <h3 property="rdfs:label">Organism Code</h3>
 <p><span property="dc:description">Short code for an organism. Normally is one or two characters long.</span>
@@ -244,6 +248,43 @@ This property has
   <a property="rdfs:domain" href="http://vocabularies.bridgedb.org/ops#Organism">Organism</a>
   as domain.</p>
 </div>
+<div id="hasPostfix" about="http://vocabularies.bridgedb.org/ops#hasPostfix" typeof="owl:DatatypeProperty">
+<h3 property="rdfs:label">Has Postfix</h3>
+<p>This property has
+  <a property="rdfs:domain" href="http://vocabularies.bridgedb.org/ops#UriPattern">URI Pattern</a>
+  as domain.</p>
+</div>
+<div id="hasPrefix" about="http://vocabularies.bridgedb.org/ops#hasPrefix" typeof="owl:DatatypeProperty">
+<h3 property="rdfs:label">Has Prefix</h3>
+<p>This property has
+  <a property="rdfs:domain" href="http://vocabularies.bridgedb.org/ops#UriPattern">URI Pattern</a>
+  as domain.</p>
+</div>
+<div id="isDeprecatedBy" about="http://vocabularies.bridgedb.org/ops#isDeprecatedBy" typeof="owl:DatatypeProperty">
+<h3 property="rdfs:label">Is Deprecated By</h3>
+</div>
+<div id="isSymmetric" about="http://vocabularies.bridgedb.org/ops#isSymmetric" typeof="owl:DatatypeProperty">
+<h3 property="rdfs:label">Is Symettric</h3>
+<p>This property has
+  <a property="rdfs:range" href="http://www.w3.org/2001/XMLSchema#boolean">XSD boolean</a>
+  as range.</p>
+</div>
+<div id="urnBase" about="http://vocabularies.bridgedb.org/ops#urnBase" typeof="owl:DatatypeProperty">
+<h3 property="rdfs:label">URN Base</h3>
+<p>This property has
+  <a property="rdfs:domain" href="http://vocabularies.bridgedb.org/ops#DataSource">Data Source</a>
+  as domain.</p>
+</div>
+<div id="various" about="http://vocabularies.bridgedb.org/ops#various" typeof="owl:DatatypeProperty">
+<h3 property="rdfs:label">Various</h3>
+</div>
+<div id="xrefPrefix" about="http://vocabularies.bridgedb.org/ops#xrefPrefix" typeof="owl:DatatypeProperty">
+<h3 property="rdfs:label">Xref Prefix</h3>
+</div>
+
+
+
+
 
 <h1>Technical notes</h1>
 <p about="http://vocabularies.bridgedb.org/ops#">
