--- a/index.html
+++ b/index.html
@@ -23,16 +23,27 @@
     visibility: hidden;
   }
 
+  /* cleaner separation */
   section {
     margin-top: 2em;
   }
+
+  /* For scrollspy */
+  body {
+    position: relative;
+  }
+
+  .navbar-brand img {
+    height: 1em;
+  }
+
   -->
   </style>
 </head>
-<body role="document">
+<body role="document" data-spy="scroll" data-target="#navbar">
 
 
-  <nav class="navbar navbar-inverse navbar-fixed-top">
+  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -41,7 +52,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">BridgeDb DataSource Ontology</a>
+        <a class="navbar-brand" href="http://www.bridgedb.org/"><img src="http://www.bridgedb.org/bdb-logo.png" alt="BridgeDb" /></a>
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
@@ -59,7 +70,6 @@
 <div class="container" role="main">
 
 <div class="jumbotron">
-<img src="http://www.bridgedb.org/bdb-logo.png" alt="The BridgeDb logo: the name in black with a white bridge crossing the characters." /><br />
 <div about="http://vocabularies.bridgedb.org/ops#" typeof="owl:Ontology">
 <h1>The <span property="rdfs:label">BridgeDb DataSource Ontology</span></h1>
 <h2>Version <span property="owl:versionInfo">2.1.0</span></h2>
