--- a/index.html
+++ b/index.html
@@ -80,6 +80,26 @@
 <p>
 This page describes the BridgeDb ontology <code>http://vocabularies.bridgedb.org/ops#</code> - make sure to visit our <a rel="rdfs:seeAlso" href="http://www.bridgedb.org/">homepage</a> too!
 </p>
+
+
+<h4>OWL ontology and SKOS vocabulary:</h4>
+<p>
+<a class="btn btn-primary btn-lg"
+href="http://rdf.greggkellogg.net/distiller?uri=http://vocabularies.bridgedb.org/ops#">RDFa</a>
+<a class="btn btn-primary btn-lg" rev="prov:specializationOf" rel="dcterms:alternate"
+href="http://rdf.greggkellogg.net/distiller?format=turtle&amp;in_fmt=rdfa&amp;uri=http://vocabularies.bridgedb.org/ops#">Turtle</a>
+<a class="btn btn-primary btn-lg"  rev="prov:specializationOf" rel="dcterms:alternate"
+href="http://rdf.greggkellogg.net/distiller?format=jsonld&amp;in_fmt=rdfa&amp;uri=http://vocabularies.bridgedb.org/ops#">JSON-LD</a>
+<a class="btn btn-default btn-lg"  rev="prov:specializationOf" rel="dcterms:alternate"
+href="http://rdf.greggkellogg.net/distiller?format=ntriples&amp;in_fmt=rdfa&amp;uri=http://vocabularies.bridgedb.org/ops#">N-Triples</a>
+<a class="btn btn-default btn-lg"  rev="prov:specializationOf" rel="dcterms:alternate"
+href="http://rdf.greggkellogg.net/distiller?format=rdfxml&amp;in_fmt=rdfa&amp;uri=http://vocabularies.bridgedb.org/ops#">RDF/XML</a>
+</p>
+
+<h4>License:</h4>
+<p><a property="dcterms:license" href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, version 2.0</a></p>
+
+
 </div>
 </div>
 
