--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
   -->
   </style>
 </head>
-<body role="document" data-spy="scroll" data-target="#navbar">
+<body data-spy="scroll" data-target="#navbar">
 
 
-  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+  <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
