Fixed a HTML5 validation error (closes #8)

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <h1>The <span property="rdfs:label">BridgeDb DataSource Ontology</span></h1>
 <h2>Version <span property="owl:versionInfo">2.1.0</span></h2>
 <p>
-This page describes the BridgeDb ontology <code>http://vocabularies.bridgedb.org/ops#</code> - make sure to visit our <a rel="rdfs:seeAlso" href="http://www.bridgedb.org/">homepage</a> too!
+This page describes the BridgeDb ontology <code>http://vocabularies.bridgedb.org/ops#</code> - make sure to visit our <a property="rdfs:seeAlso" href="http://www.bridgedb.org/">homepage</a> too!
 </p>
 
 
