--- a/index.html
+++ b/index.html
@@ -328,6 +328,15 @@ This property has
 <section id="_data_properties">
 <h2>Data Properties</h2>
 
+<div id="conventionalName" about="http://vocabularies.bridgedb.org/ops#conventionalName" typeof="owl:DatatypeProperty">
+<h3 property="rdfs:label">Conventional Name</h3>
+<code property="skos:prefLabel">bdb:conventionalName</code>
+<p><span property="dc:description">The conventional name of the data source, as per established usage norms for the BridgeDb project.</span>
+This property has
+  <a property="rdfs:domain" href="http://vocabularies.bridgedb.org/ops#DataSource">DataSource</a>
+  as domain.</p>
+</div>
+
 <div id="fullName" about="http://vocabularies.bridgedb.org/ops#fullName" typeof="owl:DatatypeProperty">
 <h3 property="rdfs:label">Full Name</h3>
 <code property="skos:prefLabel">bdb:fullName</code>
