Add links to full lists of supported values

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ This property has
 <div id="systemCode" about="http://vocabularies.bridgedb.org/ops#systemCode" typeof="owl:DatatypeProperty">
 <h3 property="rdfs:label">System Code</h3>
 <code property="skos:prefLabel">bdb:systemCode</code>
-<p><span property="dc:description">Short code unique for a data source. Often consisting of two or three characters.</span>
+<p><span property="dc:description">Short code unique for a data source, often consisting of two or three characters. All supported systemCodes are listed in the second column of <a href="https://github.com/bridgedb/BridgeDb/blob/master/org.bridgedb.bio/resources/org/bridgedb/bio/datasources.txt">this table</a>.</span>
 This property has
   <a property="rdfs:domain" href="http://vocabularies.bridgedb.org/ops#DataSource">DataSource</a>
   as domain.</p>
@@ -422,7 +422,7 @@ This property has
 <div id="shortName" about="http://vocabularies.bridgedb.org/ops#shortName" typeof="owl:DatatypeProperty">
 <h3 property="rdfs:label">Short Name</h3>
 <code property="skos:prefLabel">bdb:shortName</code>
-<p><span property="dc:description">Short or common name of the organism.</span>
+<p><span property="dc:description">Short (common English) name of the organism. All supported short names are listed in the first column of <a href="http://webservice.bridgedb.org/contents">this table</a>.</span>
 This property has
   <a property="rdfs:domain" href="http://vocabularies.bridgedb.org/ops#Organism">Organism</a>
   as domain.</p>
@@ -431,7 +431,7 @@ This property has
 <div id="latinName" about="http://vocabularies.bridgedb.org/ops#latinName" typeof="owl:DatatypeProperty">
 <h3 property="rdfs:label">Latin Name</h3>
 <code property="skos:prefLabel">bdb:latinName</code>
-<p><span property="dc:description">Latin name of the organism.</span>
+<p><span property="dc:description">Latin name of the organism. All supported Latin names are listed in the second column of <a href="http://webservice.bridgedb.org/contents">this table</a>.</span>
 This property has
   <a property="rdfs:domain" href="http://vocabularies.bridgedb.org/ops#Organism">Organism</a>
   as domain.</p>
