Updated the link to the datasources.tsv (recently got renamed)

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ This property has
 <div id="systemCode" about="http://vocabularies.bridgedb.org/ops#systemCode" typeof="owl:DatatypeProperty">
 <h3 property="rdfs:label">System Code</h3>
 <code property="skos:prefLabel">bdb:systemCode</code>
-<p><span property="dc:description">Short code unique for a data source, often consisting of two or three characters. All supported systemCodes are listed in the second column of <a href="https://github.com/bridgedb/BridgeDb/blob/master/org.bridgedb.bio/resources/org/bridgedb/bio/datasources.txt">this table</a>.</span>
+<p><span property="dc:description">Short code unique for a data source, often consisting of two or three characters. All supported systemCodes are listed in the second column of <a href="https://github.com/bridgedb/BridgeDb/blob/master/org.bridgedb.bio/resources/org/bridgedb/bio/datasources.tsv">this table</a>.</span>
 This property has
   <a property="rdfs:domain" href="http://vocabularies.bridgedb.org/ops#DataSource">DataSource</a>
   as domain.</p>
